@@ -34,51 +34,50 @@ module Prowler
     end
 
     # Send a notification to your iPhone:
-    # * event:    The title of notification you want to send.
-    # * message:  The text of the notification message you want to send.
+    # * event:   The title of notification you want to send.
+    # * message: The text of the notification message you want to send.
+    # * api_key: One or more API keys to be notified - uses the configured key(s) if not provided.
     #
     # The following options are supported:
     # * +:delayed+:  Whether to use Delayed::Job to send notifications.
     # * +:priority+: The priority of the notification - see Prowler::Priority.
     # * +:url+:      A custom url for the Prowl application to open.
     def notify(event, message, *args)
+      api_key = args.first.is_a?(String) || args.first.is_a?(Array) ? args.shift : self.api_key
+
       raise ConfigurationError, "You must provide an API key to send notifications" if api_key.nil?
       raise ConfigurationError, "You must provide an application name to send notifications" if application.nil?
 
-      if args.first.is_a?(Hash)
-        options = args.first
-        options[:priority] ||= Prowler::Priority::NORMAL
-        options[:delayed] ||= Prowler.delayed
+      if args.first.is_a?(Fixnum)
+        options = { :priority => args.shift, :delayed => args.shift || Prowler.delayed }
       else
-        options = {
-          :priority => args.shift || Prowler::Priority::NORMAL,
-          :delayed => args.shift || Prowler.delayed
-        }
+        options = args.last.is_a?(Hash) ? args.pop : {}
+        options = { :priority => Prowler::Priority::NORMAL, :delayed => Prowler.delayed }.merge(options)
       end
 
+      options.merge!(
+        :application => application, :providerkey => provider_key,
+        :apikey => api_key, :event => event, :description => message
+      )
+
       if options.delete(:delayed)
-        enqueue_delayed_job(event, message, options)
+        enqueue_delayed_job(options)
       else
-        perform(
-          :add, api_key, provider_key,
-          options.merge({
-            :application => application,
-            :event => event,
-            :description => message
-          })
-        )
+        perform(:add, options)
       end
     end
 
     # Verify the configured API key is valid
-    def verify
-      raise ConfigurationError, "You must provide an API key to verify" if api_key.nil?
-      perform(:verify, api_key, provider_key, {}, :get)
+    def verify(api_key = nil)
+      raise ConfigurationError, "You must provide an API key to verify" if api_key.nil? && self.api_key.nil?
+      perform(:verify, { :providerkey => provider_key, :apikey => api_key || self.api_key }, :get)
     end
 
     private
-      def perform(command, api_key, provider_key, data = {}, method = :post) #:nodoc:
-        params = { :apikey => format_api_key(command, api_key), :providerkey => provider_key }.merge(data).delete_if { |k,v| v.nil? }
+      def perform(command, params = {}, method = :post) #:nodoc:
+        params[:apikey] = format_api_key(command, params[:apikey]) if params.key?(:apikey)
+        params.delete_if { |k,v| v.nil? }
+
         case method
         when :post
           perform_post(command, params)
@@ -87,14 +86,14 @@ module Prowler
         end
       end
 
-      def enqueue_delayed_job(event, message, options) #:nodoc:
+      def enqueue_delayed_job(options) #:nodoc:
         record = Delayed::Job.enqueue(Prowler::DelayedJob.new do |job|
-          job.api_key = api_key
-          job.provider_key = provider_key
-          job.application = application
-          job.event = event
-          job.message = message
-          job.priority = options[:priority] || Priority::NORMAL
+          job.api_key = options[:apikey]
+          job.provider_key = options[:providerkey]
+          job.application = options[:application]
+          job.event = options[:event]
+          job.message = options[:description]
+          job.priority = options[:priority]
           job.url = options[:url]
         end)
         !record.new_record?
